--- a/app.json
+++ b/app.json
@@ -1,8 +1,10 @@
 {
-  "pages":[
+  "pages": [
     "pages/list/list",
     "pages/index/index",
     "pages/inside/inside",
-    "pages/type/type"
+    "pages/type/type",
+    "pages/articleDetail/articleDetail"
+
   ]
 }
