--- a/project.config.json
+++ b/project.config.json
@@ -37,13 +37,20 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "读书页面",
 					"pathName": "pages/type/type",
 					"query": "typeId=3",
+					"scene": null
+				},
+				{
+					"id": 1,
+					"name": "详情页面",
+					"pathName": "pages/articleDetail/articleDetail",
+					"query": "id=11",
 					"scene": null
 				}
 			]
